<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginForm"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leaseacaaar"
        android:textSize="50sp"
        android:transitionName="logo_image"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_there_login"
        android:textSize="30sp"
        android:transitionName="logo_slogan"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_continue"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20sp"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20sp"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:elevation="0dp"
            />

        <Button
            android:id="@+id/submitBtn"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:onClick="loginUser"
            android:text="@string/submit"
            android:textColor="#fff" />
        <Button
            android:layout_width="200dp"
            android:id="@+id/create_signup"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/new_user_sign_up"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:elevation="0dp"
            />
    </LinearLayout>


</LinearLayout>